css.css
* {
    box-sizing: border-box;
    font-family: "Nixie One";
}

body {
    margin: 0;
  
}

/* Style the header */
.header {
    background-color: rgba(207,208,195,1);
    padding: 0;
    text-align: right;
    color: rgba(64,64,64,1);
  
}

h1{
    background-color: rgba(196,166,121,1);
    color: rgba (64,64,64,1);
    padding: 10px;
}

h2, h3 {
    color: rgba(64,64,64,1);
    padding: 10px;
}


/* Container for flexboxes */
.row {
    display: -webkit-flex;
    display: flex;
}

/* Create three unequal columns that sits next to each other */
.column {
    padding: 10px;
    
}

/* Left and right column */
.column.side {
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
}

/* Middle column */
.column.middle {
    -webkit-flex: 2;
    -ms-flex: 2;
    flex: 2;
}

/* Style the footer */
.footer {
    background-color: rgba(222, 224, 215, 1);
    padding: 10px;
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
}

ul {
    display: flex;
    align-items: stretch; /* Default */
    justify-content: space-between;
    width: 100%;
    margin: 0;
    padding: 0;
}

li {
    flex: 0 1 auto; /* Default */
    display: inline;
    list-style-type: none;
}

/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
@media (max-width: 600px) {
    .row {
      -webkit-flex-direction: column;
      flex-direction: column;
    }
}

